	- Fix Assert Causing DoS in dname_pkt_copy(),
	  reported by X41 D-Sec.
	- Fix OOB Read in sldns_wire2str_dname_scan(),
	  reported by X41 D-Sec.
	- Fix Out of Bounds Write in sldns_str2wire_str_buf(),
	  reported by X41 D-Sec.
	- Fix Out of Bounds Write in sldns_b64_pton(),
	  fixed by check in sldns_str2wire_int16_data_buf(),
	  reported by X41 D-Sec.

2 December 2019: Wouter
	- Merge pull request #122 from he32: In tcp_callback_writer(),
	  don't disable time-out when changing to read.

22 November 2019: George
	- Fix compiler warnings.

22 November 2019: Wouter
	- Fix dname loop maximum, reported by Eric Sesterhenn from X41 D-Sec.
	- Add make distclean that removes everything configure produced,
	  and make maintainer-clean that removes bison and flex output.

20 November 2019: Wouter
	- Fix Out of Bounds Read in rrinternal_get_owner(),
	  reported by X41 D-Sec.
	- Fix Race Condition in autr_tp_create(),
	  reported by X41 D-Sec.
	- Fix Shared Memory World Writeable,
	  reported by X41 D-Sec.
	- Adjust unbound-control to make stats_shm a read only operation.
	- Fix Weak Entropy Used For Nettle,
	  reported by X41 D-Sec.
	- Fix Randomness Error not Handled Properly,
	  reported by X41 D-Sec.
	- Fix Out-of-Bounds Read in dname_valid(),
	  reported by X41 D-Sec.
	- Fix Config Injection in create_unbound_ad_servers.sh,
	  reported by X41 D-Sec.
	- Fix Local Memory Leak in cachedb_init(),
	  reported by X41 D-Sec.
	- Fix Integer Underflow in Regional Allocator,
	  reported by X41 D-Sec.
	- Upgrade compat/getentropy_linux.c to version 1.46 from OpenBSD.
	- Synchronize compat/getentropy_win.c with version 1.5 from
	  OpenBSD, no changes but makes the file, comments, identical.
	- Upgrade compat/getentropy_solaris.c to version 1.13 from OpenBSD.
	- Upgrade compat/getentropy_osx.c to version 1.12 from OpenBSD.
	- Changes to compat/getentropy files for,
	  no link to openssl if using nettle, and hence config.h for
	  HAVE_NETTLE variable.